Update portfolio links and add VSCode settings
Updated CV download link and project GitHub URLs in portfolio.html for accuracy. Added .vscode/settings.json to specify Live Server port for local development.

--- a/portfolio.html
+++ b/portfolio.html
@@ -73,7 +73,7 @@
     <header>
       <h1>Kgatle Kgaugelo</h1>
       <p>Computer Science Student | Aspiring Developer & Tech Innovator</p>
-      <a class="download-btn" href="Kgatle_Kgaugelo_CV.pdf" target="_blank">Download CV (PDF)</a>
+  <a class="download-btn" href="Kgatle Kgaugelo - CV-3.pdf" download>Download CV (PDF)</a>
     </header>
 
     <section id="about">
@@ -192,13 +192,13 @@
         <div class="project-card">
           <h3>👩‍🏫 Basic Education Teacher App <span class="group-tag">Group Project</span></h3>
           <p>Assists teachers with lesson planning, student navigation, and classroom management.</p>
-          <a href="https://github.com/KgaugeloKgatle/Kgaugelo-Basic-Education-Teacher-App" target="_blank">View on GitHub</a>
+          <a href="https://github.com/KgaugeloKgatle/Eduvisor" target="_blank">View on GitHub</a>
         </div>
 
         <div class="project-card">
           <h3>♿ EduVisor – Disability App <span class="group-tag">Group Project</span></h3>
           <p>Supports students with disabilities through educational accessibility and study tools.</p>
-          <a href="https://github.com/KgaugeloKgatle/Eduvisor" target="_blank">View on GitHub</a>
+          <a href="https://github.com/kamo123maetso/HOPEHARBOUR1" target="_blank">View on GitHub</a>
         </div>
       </div>
 
